fixed lesson overlapping issues and removed some log statements

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,6 +57,7 @@
   padding-left: 3px;
   padding-top: 3px;
   transform: translateX(4vw);
+  margin: 0px;
 }
 
 .timetableRow {
